--- a/templates/ranking/index.html.twig
+++ b/templates/ranking/index.html.twig
@@ -17,7 +17,7 @@
       'endpoint': path('ranking_search_async'),
       'container_id': 'ranking-result',
       'update_url': true,
-      'enabled_filters': ['continent', 'country', 'status', 'notridden', 'new', 'materialType', 'seatingType', 'model', 'manufacturer', 'openingDate']
+      'excluded_filters': []
     }
   } only %}
 {% endblock %}
