--- a/templates/Maps/index.html.twig
+++ b/templates/Maps/index.html.twig
@@ -16,7 +16,8 @@
     'filtersForm': filtersForm,
     'filterConfig': {
       'map_outlet': '.map-container',
-      'enabled_filters': ['status', 'kiddie', 'notridden', 'name', 'manufacturer']
+      'update_url': true,
+      'excluded_filters': ['new']
     }
   } only %}
 {% endblock %}
